syntax = "proto3";

package get_fuel_service.api.request;

import "validate/validate.proto";

message CreateCarRequest {
  string vin = 1 [(validate.rules).string.min_len = 1];
  string systemId = 2;
}